# Project-X-v2

./: Cargo.toml  README.md  example.md
db/migrations/: 0000_initial.sql
src/: app.rs  main.rs
src/modules/: mod.rs
src/modules/did/: dto.rs  handler.rs  routes.rs  service.rs
src/modules/health/: handler.rs  routes.rs
src/shared/: mod.rs
src/shared/config/: env.rs
